--- a/info.yaml
+++ b/info.yaml
@@ -1,9 +1,9 @@
 # Tiny Tapeout project information
 project:
-  title:        ""      # Project title
-  author:       ""      # Your name
-  discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  ""      # One line description of what your project does
+  title:        "8-bit-CARRY_SKIP"      # Project title
+  author:       "Aaquil Kasham, Temiloluwa Omomuwasan"      # Your name
+  discord:      "Theaaquiyway"      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
+  description:  "8 bit input adder"      # One line description of what your project does
   language:     "Verilog" # other examples include SystemVerilog, Amaranth, VHDL, etc
   clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
 
@@ -11,7 +11,7 @@ project:
   tiles: "1x1"          # Valid values: 1x1, 1x2, 2x2, 3x2, 4x2, 6x2 or 8x2
 
   # Your top module name must start with "tt_um_". Make it unique by including your github username:
-  top_module:  "tt_um_example"
+  top_module:  "tt_um_Kashmaster_CarrySkip"
 
   # List your project's source files here.
   # Source files must be in ./src and you must list each source file separately, one per line.
@@ -19,37 +19,37 @@ project:
   source_files:
     - "project.v"
 
-# The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
+# The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins
 pinout:
   # Inputs
-  ui[0]: ""
-  ui[1]: ""
-  ui[2]: ""
-  ui[3]: ""
-  ui[4]: ""
-  ui[5]: ""
-  ui[6]: ""
-  ui[7]: ""
+  ui[0]: "a[0]"
+  ui[1]: "a[1]"
+  ui[2]: "a[2]"
+  ui[3]: "a[3]"
+  ui[4]: "a[4]"
+  ui[5]: "a[5]"
+  ui[6]: "a[6]"
+  ui[7]: "a[7]"
 
   # Outputs
-  uo[0]: ""
-  uo[1]: ""
-  uo[2]: ""
-  uo[3]: ""
-  uo[4]: ""
-  uo[5]: ""
-  uo[6]: ""
-  uo[7]: ""
+  uio[0]: "b[0]"
+  uio[1]: "b[1]"
+  uio[2]: "b[2]"
+  uio[3]: "b[3]"
+  uio[4]: "b[4]"
+  uio[5]: "b[5]"
+  uio[6]: "b[6]"
+  uio[7]: "b[7]"
 
   # Bidirectional pins
-  uio[0]: ""
-  uio[1]: ""
-  uio[2]: ""
-  uio[3]: ""
-  uio[4]: ""
-  uio[5]: ""
-  uio[6]: ""
-  uio[7]: ""
+  uo[0]: "sum[0]"
+  uo[1]: "sum[1]"
+  uo[2]: "sum[2]"
+  uo[3]: "sum[3]"
+  uo[4]: "sum[4]"
+  uo[5]: "sum[5]"
+  uo[6]: "sum[6]"
+  uo[7]: "sum[7]"
 
 # Do not change!
 yaml_version: 6
